@@ -106,16 +106,6 @@ gametype CODM new extend Q3M
     master query = full empty
 end
 
-# Americas Army 2.2
-gametype AMS new extend GS2
-   name = America's Army 2.2
-   default port = 1716
-   status port offset = 1
-   template var = AMERICASARMY
-   game rule = gametype
-   flags = TF_SINGLE_QUERY|TF_U2_NAMES
-end
-
 # enemy territory
 gametype WOETS new extend Q3S
     name = Enemy Territory
